--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/ECDSA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.guava-18.0.jar=guava-18.0.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.guava-18.0.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
